--- a/duel.html
+++ b/duel.html
@@ -1,43 +1,158 @@
-<mjml>
-  <mj-body>
-    <mj-section padding-bottom="10px" padding-left="10px" padding-right="10px">
-      <mj-column>
-        <mj-image src="https://fakeimg.pl/200x50/282828/eae0d0/?retina=1&text=%E3%81%93%E3%82%93%E3%81%AB%E3%81%A1%E3%81%AF&font=noto" padding-bottom="0"></mj-image>
-      </mj-column>
-    </mj-section>
-    <mj-section padding-top="0" padding-bottom="0">
-      <mj-column>
-        <mj-divider border-width="2px" border-style="solid" border-color="#50E3C2" />
-      </mj-column>
-    </mj-section>
-    <mj-section padding-top="10px" padding-left="10px" padding-right="10px">
-      <mj-column>
-        <mj-text font-size="18px" font-weight="bold" color="#50E3C2" padding-top="0" padding-bottom="2px" font-family="helvetica">Studio Duel</mj-text>
-        <mj-text font-size="16px" color="#000000" padding-top="0" line-height="20px" font-family="helvetica">Dr. Lelykade 50k, 2583 CM Den Haag</mj-text>
-      </mj-column>
+<table
+  style="min-width: 400px; max-width: 400px; border: none"
+  cellpadding="0"
+  cellspacing="0"
+>
+  <tbody>
+    <tr>
+      <td style="border-bottom: 2px solid #6ebda2; padding-bottom: 15px">
+        <img
+          src="https://www.studioduel.nl/images/Duel-handtekening.png"
+          title="Studio Duel"
+          alt="Logo"
+          width="100%"
+        />
+      </td>
+    </tr>
+    <tr>
+      <table
+        style="
+          padding-top: 15px;
+          padding-left: 15px;
+          padding-right: 10px;
+          table-layout: auto;
+          min-width: 400px;
+          max-width: 400px;
+        "
+        cellpadding="0"
+        cellspacing="0"
+      >
+        <tbody>
+          <tr>
+            <td style="vertical-align: top; padding-right: 30px">
+              <p
+                style="
+                  font-family: helvetica;
+                  font-size: 14px;
+                  font-weight: bold;
+                  line-height: 1;
+                  text-align: left;
+                  color: #6ebda2;
+                  margin: 0;
+                "
+              >
+                Studio Duel
+              </p>
+              <p
+                style="
+                  font-family: helvetica;
+                  font-size: 12px;
+                  line-height: 20px;
+                  text-align: left;
+                  color: #000000;
+                  margin-top: 5px;
+                "
+              >
+                <a
+                  href="https://goo.gl/maps/qBtVCoBUrmiZrxBP6"
+                  rel="noreferrer"
+                  target="_blank"
+                  style="color: #000; text-decoration: none"
+                  >Dr. Lelykade 50-k<br />
+                  2583 CM Den Haag</a
+                >
+              </p>
+            </td>
+            <td style="vertical-align: top; padding-right: 30px">
+              <p
+                style="
+                  font-family: helvetica;
+                  font-size: 14px;
+                  font-weight: bold;
+                  line-height: 1;
+                  text-align: left;
+                  color: #6ebda2;
+                  margin: 0;
+                "
+              >
+                Contact
+              </p>
+              <p
+                style="
+                  font-family: helvetica;
+                  font-size: 12px;
+                  line-height: 16px;
+                  text-align: left;
+                  color: #000000;
+                  margin-top: 5px;
+                "
+              >
+                <a
+                  href="mailto:tom@studioduel.nl"
+                  style="color: #000; text-decoration: none"
+                  >tom@studioduel.nl</a
+                ><br />
+                <a
+                  href="https://www.studioduel.nl"
+                  target="_blank"
+                  style="color: #000; text-decoration: none"
+                  >www.studioduel.nl</a
+                ><br />
+                <a
+                  href="tel:0707113045"
+                  style="color: #000; text-decoration: none"
+                  >070-711 30 45</a
+                >
+              </p>
+            </td>
+            <td style="vertical-align: top; width: 1px white-space: nowrap;">
+              <p
+                style="
+                  font-family: helvetica;
+                  font-size: 14px;
+                  font-weight: bold;
+                  line-height: 1;
+                  text-align: left;
+                  color: #6ebda2;
+                  margin: 0;
+                "
+              >
+                Social
+              </p>
 
-      <mj-column>
-        <mj-text font-size="18px" font-weight="bold" color="#50E3C2" padding-top="0" padding-bottom="0" font-family="helvetica">
-          Contact
-        </mj-text>
+              <p
+                style="
+                  margin-top: 5px;
+                  font-family: helvetica;
+                  font-size: 12px;
+                  line-height: 16px;
+                  text-align: left;
+                  color: #000000;
+                  margin-top: 5px;
+                "
+              >
+                <a
+                  href="https://instagram.com/studioduel?utm_medium=copy_link"
+                  target="_blank"
+                  rel="noreferrer"
+                  style="color: #000; text-decoration: none"
+                  target="_blank"
+                  >Instagram</a
+                ><br />
 
-        <mj-text font-size="16px" color="#000000" padding-top="0" line-height="20px" font-family="helvetica">
-          <a href="mailto:tom@studioduel.nl" style="color: #000; text-decoration: none;">tom@studioduel.nl</a><br />
-          <a href="https://www.studioduel.nl/" style="color: #000; text-decoration: none;">www.studioduel.nl</a><br />
-          <a href="tel:0707113045" style="color: #000; text-decoration: none;">070 711 30 45</a>
-        </mj-text>
-      </mj-column>
-
-      <mj-column>
-        <mj-text font-size="18px" font-weight="bold" color="#50E3C2" padding-top="0" padding-bottom="2px" font-family="helvetica">Social</mj-text>
-
-        <mj-social font-size="15px" icon-size="20px" color="#000000" padding-top="0" icon-padding="5px" border-radius="40px" inner-padding="5px" align="left" mode="horizontal">
-          <mj-social-element name="facebook" href="#" background-color="#000000"></mj-social-element>
-          <mj-social-element name="instagram" href="#" background-color="#000000"></mj-social-element>
-          <mj-social-element name="twitter"  href="#" background-color="#000000"></mj-social-element>
-        </mj-social>
-
-      </mj-column>
-    </mj-section>
-  </mj-body>
-</mjml>
+                <a
+                  href="https://nl.linkedin.com/company/duel./"
+                  target="_blank"
+                  rel="noreferrer"
+                  style="color: #000; text-decoration: none"
+                  target="_blank"
+                  >Linkedin</a
+                >
+              </p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </tr>
+  </tbody>
+</table>
