--- a/duel.html
+++ b/duel.html
@@ -5,7 +5,7 @@
 >
   <tbody>
     <tr>
-      <td style="border-bottom: 2px solid #6ebda2; padding-bottom: 15px">
+      <td style="border-bottom: 2px solid #6ebda2; padding-bottom: 15px; width: 100%;">
         <img
           src="https://www.studioduel.nl/images/Duel-handtekening.png"
           title="Studio Duel"
