--- a/duel.html
+++ b/duel.html
@@ -5,7 +5,13 @@
 >
   <tbody>
     <tr>
-      <td style="border-bottom: 2px solid #6ebda2; padding-bottom: 15px; width: 100%;">
+      <td
+        style="
+          border-bottom: 2px solid #6ebda2;
+          padding-bottom: 15px;
+          width: 400px;
+        "
+      >
         <img
           src="https://www.studioduel.nl/images/Duel-handtekening.png"
           title="Studio Duel"
